--- a/src/scss/features/features.scss
+++ b/src/scss/features/features.scss
@@ -83,6 +83,7 @@
         margin: 1rem 0 0;
       }
       @media (max-width: 576px) {
+        margin: 1.5rem 0 0;
         font-size: 1.5rem;
       }
     }
