--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -218,14 +218,19 @@ button:focus {
 @import "new_tariff/new_tariff";
 @import "about/about";
 @import "features/features";
+@import "subscription_ended/subscription_ended";
+@import "report/report";
+@import "registration/registration";
+@import "l_login/login";
+@import "first_screen/first_screen";
+@import "add_description/add_description";
 .l_site-main {
   @import "profile/profile";
   @import "create_publications/create_publications";
-  @import "add_description/add_description";
+
   @import "add_account/add_account";
   @import "edit_account/edit_account";
   @import "spa-sections/tariff";
-  @import "report/report";
   @import "treatment/treatment";
   @import "faq/faq";
   @import "description_templates/description_templates";
@@ -250,266 +255,7 @@ button:focus {
     }
   }
 
-  .first_screen & {
-    display: flex;
-    align-items: center;
-    height: calc(100% - 100px);
 
-    .first_screen-container {
-      padding: 3rem 0;
-      @media (max-width: 576px) {
-        padding: 3.5rem 0;
-      }
-      .first_screen_sub-title {
-        font-size: 1.875rem;
-        font-family: Rubik, sans-serif;
-        color: #1F2022;
-        text-align: center;
-        font-weight: 400;
-        margin-bottom: 3.125rem;
-        @media (max-width: 1536px) {
-          font-size: 1.5rem;
-          margin-bottom: 2rem;
-        }
-        @media (max-width: 576px) {
-          font-size: 1.2rem;
-        }
-      }
-
-      .btn {
-        padding: 1.2rem 5.78rem;
-        font-size: 1.3rem;
-        border-radius: 0.65rem;
-        @media (max-width: 1536px) {
-          padding: 0.8rem 4rem !important;
-          font-size: 1rem;
-        }
-        @media (max-width: 576px) {
-          padding: 0.71rem 3rem;
-        }
-      }
-    }
-  }
-
-  .subscription_end & {
-    display: flex;
-    align-items: center;
-    height: calc(100% - 100px);
-
-    .subs_end-container {
-        padding: 4rem 0;
-      @media (max-width: 576px) {
-        padding: 0;
-      }
-
-      .subs_end_sub-title {
-        font-size: 1.875rem;
-        font-family: Rubik, sans-serif;
-        color: #1F2022;
-        font-weight: 400;
-        text-align: center;
-        margin-bottom: 3.125rem;
-        @media (max-width: 1600px) {
-          font-size: 1.3rem;
-          margin-bottom: 2rem;
-        }
-        @media (max-width: 576px) {
-          font-size: 1.2rem;
-        }
-      }
-
-      .btn {
-        padding: 1.2rem 9rem;
-        font-size: 1.3rem;
-        border-radius: 0.65rem;
-        @media (max-width: 1600px) {
-          padding: 0.71rem 7rem;
-          font-size: 1rem;
-        }
-        @media (max-width: 576px) {
-          padding: 0.71rem 1rem;
-          margin: 0 auto 1rem !important;
-          width: 70%;
-        }
-      }
-    }
-  }
-
-
-
-  .registration & {
-    display: flex;
-    align-items: center;
-    padding: 1rem 0;
-    background: url(../images/element.png) no-repeat 62vw calc(100% + 200px);
-    height: 100%;
-    background-size: contain;
-    @media only screen
-    and (min-device-width : 768px)
-    and (max-device-width : 1024px)
-    and (orientation : portrait) {
-      background-size: 28%;
-    }
-    /* Portrait */
-    @media only screen
-    and (min-width: 1024px)
-    and (max-height: 1366px)
-    and (orientation: portrait)
-    and (-webkit-min-device-pixel-ratio: 1.5) {
-      background-size: 33%;
-    }
-    @media (max-width: 576px) {
-      height: initial;
-      background-position: 45vw calc(100% + 115px);
-    }
-    @media (max-width: 991px) {
-      margin-top: 0;
-    }
-    .l_site-title{
-
-      @media (max-width: 1600px) {
-        font-size: 2.3rem;
-        margin-bottom: 1rem;
-      }
-      @media (max-width: 1024px) {
-        font-size: 2rem;
-      }
-    }
-  }
-
-  .l_login & {
-    display: flex;
-    align-items: center;
-    padding: 1rem 0;
-    background: url(../images/element.png) no-repeat 62vw calc(100% + 200px);
-    height: 100%;
-    background-size: contain;
-    /* Portrait */
-    @media only screen
-    and (min-width: 1024px)
-    and (max-height: 1366px)
-    and (orientation: portrait)
-    and (-webkit-min-device-pixel-ratio: 1.5) {
-      background-size: 33%;
-    }
-    @media only screen
-    and (min-device-width : 768px)
-    and (max-device-width : 1024px)
-    and (orientation : portrait) {
-      background-size: 28%;
-    }
-    @media (max-width: 576px) {
-      height: initial;
-      background-position: 45vw calc(100% + 200px);
-    }
-    @media (max-width: 991px) {
-      margin-top: 0;
-    }
-    .l_site-title{
-      margin-bottom: 1.5rem;
-      @media (max-width: 1600px) {
-        font-size: 2.3rem;
-        margin-bottom: 1rem;
-      }
-      @media (max-width: 1024px) {
-        font-size: 2rem;
-      }
-    }
-  }
-  .first_screen &{
-     display: flex;
-     align-items: center;
-     background: url(../images/element.png) no-repeat 62vw calc(100% + 200px);
-     height: calc(100% - 100px);
-     background-size: contain;
-     @media (max-width: 1600px) {
-       background-size: 16%;
-     }
-     @media (max-width: 1300px) {
-       background-size: 19%;
-     }
-     @media (max-width: 1199px) {
-       height: calc(100% - 56px);
-     }
-     @media (max-width: 991px) {
-       margin-top: 0;
-       height: 100%;
-     }
-     /* Portrait */
-     @media only screen
-     and (min-width: 1024px)
-     and (max-height: 1366px)
-     and (orientation: portrait)
-     and (-webkit-min-device-pixel-ratio: 1.5) {
-       background-size: 33%;
-     }
-     @media only screen
-     and (min-device-width : 768px)
-     and (max-device-width : 1024px)
-     and (orientation : portrait) {
-       background-size: 28%;
-     }
-     @media (max-width: 576px) {
-       height: initial;
-       background-position: 45vw calc(100% + 200px);
-     }
-     .l_site-title{
-       margin-bottom: 1.5rem;
-       @media (max-width: 1600px) {
-         font-size: 2.3rem;
-         margin-bottom: 1rem;
-       }
-       @media (max-width: 1024px) {
-         font-size: 2rem;
-       }
-     }
-   }
-  .report &{
-    display: flex;
-    align-items: center;
-    background: url(../images/element.png) no-repeat 69vw calc(100% + 200px);
-    height: calc(100% - 100px);
-    background-size: contain;
-    @media (max-width: 1199px) {
-      height: calc(100% - 56px);
-    }
-    @media (max-width: 991px) {
-      margin-top: 0;
-      height: 100%;
-    }
-    @media (max-width: 991px) {
-      margin-top: 3.5rem;
-      height: 100%;
-    }
-    /* Portrait */
-    @media only screen
-    and (min-width: 1024px)
-    and (max-height: 1366px)
-    and (orientation: portrait)
-    and (-webkit-min-device-pixel-ratio: 1.5) {
-      background-size: 33%;
-    }
-    @media only screen
-    and (min-device-width : 768px)
-    and (max-device-width : 1024px)
-    and (orientation : portrait) {
-      background-size: 28%;
-    }
-    @media (max-width: 576px) {
-      height: initial;
-      background-position: 45vw calc(100% + 200px);
-    }
-    .l_site-title{
-      margin-bottom: 1.5rem;
-      @media (max-width: 1600px) {
-        font-size: 2.3rem;
-        margin-bottom: 1rem;
-      }
-      @media (max-width: 1024px) {
-        font-size: 2rem;
-      }
-    }
-  }
   .l_features & {
     background-image: url(../images/element.png);
     background-repeat: no-repeat;
@@ -524,22 +270,6 @@ button:focus {
     }
   }
 
-  .add_description & {
-    display: flex;
-    align-items: center;
-    height: calc(100% - 100px);
-    background-image: url(../images/element.png);
-    background-repeat: no-repeat;
-    background-position: 68vw calc(100% + 75px);
-    background-size: contain;
-    @media (max-width: 1300px) {
-      background-position: 70vw calc(100% + 130px);
-      height: calc(100% - 56px);
-    }
-    @media (max-width: 576px) {
-      background-position: 45vw calc(100% + 130px);
-    }
-  }
 
   .add_account & {
     background-image: url(../images/element.png);
@@ -929,120 +659,7 @@ button:focus {
     background: url(../images/sprite_btn.png) no-repeat -35px 0;
   }
 
-  .l_reg-title, .l_login-title {
-    font-size: 3rem;
-    font-weight: 500;
-    margin-bottom: 1.5rem;
-    font-family: Rubik, sans-serif;
-    @media (max-width: 1600px) {
-      font-size: 2.8rem;
-    }
-  }
 
-  .l_login-pass_rec {
-    text-decoration: underline;
-    color: $gray-777;
-    display: block;
-    margin-bottom: 0.5rem;
-
-    &:hover {
-      color: $a_hover;
-      text-decoration: none;
-    }
-
-    &:focus {
-      color: $a_focus;
-      text-decoration: none;
-    }
-  }
-
-
-  .l_registration {
-    .l_reg-container {
-      width: 630px;
-      padding: 3.3125rem 1.875rem;
-      background-color: #F9F9F9;
-      border-radius: 10px;
-      @media (max-width: 1600px) {
-        padding: 1.2rem;
-        width: 480px;
-      }
-      @media (max-width: 1024px), (max-height: 700px)  {
-        width: 400px;
-      }
-      .form-group{
-        margin-bottom: 1.5rem;
-        @media (max-width: 1522px) {
-          margin-bottom: 1rem;
-        }
-        .custom-field {
-          @media (max-width: 1600px)  {
-            padding: 1.58rem 1.5rem;
-            font-size: 1.2rem;
-          }
-          @media (max-width: 576px) {
-            font-size: 1.3rem;
-          }
-        }
-      }
-
-      .btn {
-        font-weight: 400;
-        width: 100%;
-        padding: 0.7rem;
-        font-size: 1.3rem;
-        margin-bottom: 1rem;
-        border-radius: 0.65rem;
-        @media (max-width: 1560px)  {
-          padding: 0.5rem;
-          font-size: 1rem;
-        }
-        @media (max-width: 1024px)  {
-          padding: 0.4rem;
-        }
-        @media (max-width: 576px) {
-          font-size: 1rem;
-        }
-      }
-
-      .l_reg-user-accept {
-        color: #777777;
-
-        a {
-          text-decoration: underline;
-
-          &:hover {
-            color: $a_hover;
-            text-decoration: none;
-          }
-
-          &:focus {
-            color: $a_focus;
-            text-decoration: none;
-          }
-        }
-      }
-
-      .l_reg-user-quest {
-        color: #777777;
-
-        a {
-          color: $a_inline3;
-          text-decoration: underline;
-
-          &:hover {
-            color: $a_hover3;
-            text-decoration: none;
-          }
-
-          &:focus {
-            color: $a_focus3;
-            text-decoration: none;
-          }
-        }
-      }
-    }
-  }
 
   .spintax_label, .default-template_label {
     font-size: 1.0625rem;
