--- a/src/scss/add_description/add_description.scss
+++ b/src/scss/add_description/add_description.scss
@@ -1,30 +1,77 @@
 @import "../variables";
 
-.add_description & {
-  .btn-inline-custom4 {
-    font-size: 1rem;
+.add_description {
+
+  .l_header {
+    @media (max-width: 991px) {
+      min-height: 56px;
+    }
   }
-  .l_add-desc{
-     margin: 0 0 1.85rem;
-    .l_add-desc-container {
-      width: 50%;
-      @media (max-width: 1199px) {
-        width: 600px;
-        margin: 0 auto;
+
+  .l_site-main {
+    display: flex;
+    align-items: center;
+    height: calc(100% - 100px);
+    background-image: url(../images/element.png);
+    background-repeat: no-repeat;
+    background-position: 68vw calc(100% + 75px);
+    background-size: contain;
+    @media (max-width: 1300px) {
+      background-position: 70vw calc(100% + 130px);
+      height: calc(100% - 56px);
+    }
+    @media (max-width: 991px) {
+      margin-top: 0;
+      height: calc(100vh - 56px);
+      background-size: contain;
+    }
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+      height: calc(100% - 56px);
+    }
+    @media (max-width: 576px) {
+      background-position: 45vw calc(100% + 130px);
+    }
+    @media (max-width: 576px) and (max-height: 620px) {
+      align-items: baseline;
+      height: 100%;
+    }
+
+    .btn-inline-custom4 {
+      font-size: 1rem;
+    }
+
+    .l_add-desc {
+      margin: 0 0 1.85rem;
+
+      .l_add-desc-container {
+        width: 50%;
+        @media (max-width: 1199px) {
+          width: 600px;
+          margin: 0 auto;
+        }
+      }
+    }
+
+    .l_site-title {
+      margin: 3rem 0;
+      @media (max-width: 1600px) {
+        margin: 1.5rem 0;
+      }
+      @media (max-width: 800px) {
+        margin: 1rem;
+      }
+      @media (max-width: 576px) {
+        //font-size: 2.2rem;
       }
     }
   }
-  .l_site-title {
-    margin: 3rem 0;
-    @media (max-width: 1600px) {
-      margin: 1.5rem 0;
+
+  .l_footer {
+    @media (max-width: 991px) {
+      display: block;
     }
-    @media (max-width: 800px) {
-      margin: 1rem;
-    }
-    @media (max-width: 576px) {
-      //font-size: 2.2rem;
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+      display: table-footer-group;
     }
   }
 }
-
