--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -281,7 +281,7 @@ input[type="checkbox"].switch:checked{
   background: #EEEEEE;
 }
 
-
+/* 
 input[type="checkbox"].switch:after{
   position: absolute;
   content: "";
@@ -303,3 +303,4 @@ input[type="checkbox"].switch:checked:after{
   left: calc(100% - 1.2em);
   background-color: #FF398B;
 }
+*/
