--- a/css/app.css
+++ b/css/app.css
@@ -10071,14 +10071,15 @@ h3 {
 
 .switch_box {
   margin-right: 1rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 /* Switch 1 Specific Styles Start */
 input[type=checkbox].switch {
   font-size: 1.5rem !important;
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
   width: 2em;
   height: 1em;
   background: #EEEEEE;
@@ -10087,37 +10088,33 @@ input[type=checkbox].switch {
   cursor: pointer;
   outline: none;
   transition: all 0.2s ease-in-out;
-  -webkit-box-shadow: none;
-  outline: -webkit-focus-ring-color auto 0;
+  border-color: transparent;
 }
 
 input[type=checkbox].switch:checked {
   background: #EEEEEE;
 }
 
-/* 
-input[type="checkbox"].switch:after{
+input[type=checkbox].switch:after {
   position: absolute;
   content: "";
   width: 1.5em;
   height: 1.5em;
   border-radius: 50%;
   background: #FFB0D0;
-  -webkit-box-shadow: 0 0 .25em rgba(0,0,0,.3);
-  box-shadow: 0 0 .25em rgba(0,0,0,.3);
-  -webkit-transform: scale(.7);
-  transform: scale(.7);
+  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.3);
+  -webkit-transform: scale(0.7);
+  transform: scale(0.7);
   left: -6px;
   top: -6px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
-input[type="checkbox"].switch:checked:after{
+input[type=checkbox].switch:checked:after {
   left: calc(100% - 1.2em);
   background-color: #FF398B;
 }
-*/
+
 @media (max-width: 991px) {
   .ch-100 {
     height: unset !important;
@@ -12594,16 +12591,6 @@ button:focus {
   background-size: contain;
   /* Portrait */
 }
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-  .registration .l_site-main {
-    background-size: 28%;
-  }
-}
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
-  .registration .l_site-main {
-    background-size: 33%;
-  }
-}
 @media (max-width: 991px) {
   .registration .l_site-main {
     height: 100vh;
@@ -12612,7 +12599,13 @@ button:focus {
 }
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   .registration .l_site-main {
+    background-size: 28%;
     height: calc(100%);
+  }
+}
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .registration .l_site-main {
+    background-size: 33%;
   }
 }
 @media (max-width: 576px) {
@@ -12740,25 +12733,26 @@ button:focus {
   background-size: contain;
   /* Portrait */
 }
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media (max-width: 991px) {
   .l_login .l_site-main {
-    background-size: 33%;
+    height: 100vh;
+    margin-top: 0;
   }
 }
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   .l_login .l_site-main {
     background-size: 28%;
+    height: calc(100%);
+  }
+}
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .l_login .l_site-main {
+    background-size: 33%;
   }
 }
 @media (max-width: 576px) {
   .l_login .l_site-main {
-    height: initial;
     background-position: 45vw calc(100% + 200px);
-  }
-}
-@media (max-width: 991px) {
-  .l_login .l_site-main {
-    margin-top: 0;
   }
 }
 .l_login .l_site-main .l_site-title {
