--- a/css/spa-app.css
+++ b/css/spa-app.css
@@ -9955,14 +9955,15 @@ h3 {
 
 .switch_box {
   margin-right: 1rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 /* Switch 1 Specific Styles Start */
 input[type=checkbox].switch {
   font-size: 1.5rem !important;
   -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  -moz-appearance: none;
   width: 2em;
   height: 1em;
   background: #EEEEEE;
@@ -9971,37 +9972,33 @@ input[type=checkbox].switch {
   cursor: pointer;
   outline: none;
   transition: all 0.2s ease-in-out;
-  -webkit-box-shadow: none;
-  outline: -webkit-focus-ring-color auto 0;
+  border-color: transparent;
 }
 
 input[type=checkbox].switch:checked {
   background: #EEEEEE;
 }
 
-/* 
-input[type="checkbox"].switch:after{
+input[type=checkbox].switch:after {
   position: absolute;
   content: "";
   width: 1.5em;
   height: 1.5em;
   border-radius: 50%;
   background: #FFB0D0;
-  -webkit-box-shadow: 0 0 .25em rgba(0,0,0,.3);
-  box-shadow: 0 0 .25em rgba(0,0,0,.3);
-  -webkit-transform: scale(.7);
-  transform: scale(.7);
+  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.3);
+  -webkit-transform: scale(0.7);
+  transform: scale(0.7);
   left: -6px;
   top: -6px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
-input[type="checkbox"].switch:checked:after{
+input[type=checkbox].switch:checked:after {
   left: calc(100% - 1.2em);
   background-color: #FF398B;
 }
-*/
+
 @media (max-width: 991px) {
   .ch-100 {
     height: unset !important;
