--- a/css/app.css
+++ b/css/app.css
@@ -10088,7 +10088,7 @@ input[type=checkbox].switch {
   cursor: pointer;
   outline: none;
   transition: all 0.2s ease-in-out;
-  border-color: transparent;
+  border: 0 solid transparent;
 }
 
 input[type=checkbox].switch:checked {
