--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -276,7 +276,7 @@ input[type="checkbox"].switch{
   cursor: pointer;
   outline: none;
   transition: all .2s ease-in-out;
-  border-color: transparent;
+  border: 0 solid transparent;
 }
 
 input[type="checkbox"].switch:checked{
